final touches | Heading glow and smooth scroll added

--- a/Jaiden.html
+++ b/Jaiden.html
@@ -7,20 +7,20 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Teko&display=swap" rel="stylesheet">
-    <title>Group</title>
+    <title>Git Group Practice | Jaiden</title>
 </head>
 <body>
 <header>
-    <h1>SPACE WALKS</h1>
+    <h1 id="heading" >SPACE WALKS</h1>
     <div name="SignIn">
         <form action="javascript:alert('JK IT DOESNT WORK');window.location.reload();">
-        <label for="Username"> Username
-        <input type="text">
+        <label for="Username" > Username
+        <input type="text" placeholder="Username" id="userName">
         </label>
         
         <label for="Password"> Password
-        <input type="password">
-        <input type="submit" value="Log in">
+        <input type="password" placeholder="Password" id="passWord">
+        <input type="submit" value="Log in" id="logInSubmit">
         </label>
         </form>
         </div>
